<resources>
    <string name="app_name">AmphSesViewer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_albums">Albums</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="title_albums">Albums</string>
    <string name="title_album">Album</string>

    <string name="home_second">Home Second</string>

    //dialog
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_email">email</string>
    <string name="hint_password">password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="username">username</string>
    <string name="sign_up">Sign up</string>
</resources>
